# atl-server

./: .gitignore  Cargo.toml  Dockerfile.benchmark  LICENSE  README.md  build.rs
.github/workflows/: audit.yml  ci.yml  release.yml
benchmark/: Dockerfile  entrypoint.sh
proto/: sequencer.proto
real-data/: receipt-lite.atl
src/: config.rs  error.rs  lib.rs  main.rs
src/anchoring/: error.rs  mod.rs  ots.rs  rfc3161.rs
src/anchoring/ots/: async_client.rs  bitcoin.rs  calendar.rs  client.rs  fixtures.rs  mock.rs  mod.rs  proof.rs  types.rs
src/anchoring/rfc3161/: asn1.rs  async_client.rs  client.rs  mod.rs  service.rs  types.rs
src/api/: dto.rs  error.rs  handlers.rs  mod.rs  router.rs  routes.rs  state.rs  streaming.rs
src/api/dto/: mod.rs  request.rs  response.rs
src/api/handlers/: anchor.rs  health.rs  helpers.rs  mod.rs
src/api/middleware/: auth.rs  mod.rs
src/background/: config.rs  mod.rs
src/background/ots_job/: config.rs  job.rs  mod.rs  poll.rs  submit.rs
src/background/ots_poll_job/: config.rs  job.rs  mod.rs  upgrade.rs
src/background/tree_closer/: config.rs  job.rs  logic.rs  mod.rs  tests.rs
src/background/tsa_job/: config.rs  job.rs  mod.rs  request.rs  round_robin.rs
src/grpc/: atl.sequencer.v1.rs  auth.rs  mod.rs  proto.rs
src/grpc/client/: config.rs  convert.rs  dispatcher.rs  mod.rs  operations.rs
src/grpc/server/: mod.rs  service.rs
src/grpc/server/handlers/: anchor.rs  health.rs  mod.rs  receipt.rs  tree.rs
src/receipt/: consistency.rs  convert.rs  format.rs  generator.rs  mod.rs  options.rs  upgrade.rs
src/sequencer/: batch.rs  buffer.rs  config.rs  core.rs  mod.rs  tsa.rs
src/storage/: config.rs  mod.rs  recovery.rs  sqlite.rs
src/storage/chain_index/: archive.rs  mod.rs  schema.rs  store.rs  verification.rs
src/storage/engine/: mod.rs  tests.rs
src/storage/index/: anchors.rs  lifecycle.rs  mod.rs  queries.rs  schema.rs
src/storage/slab/: format.rs  manager.rs  mmap.rs  mod.rs  pinned.rs
src/storage/sqlite/: anchors.rs  checkpoints.rs  config.rs  convert.rs  entries.rs  lifecycle.rs  mod.rs  schema.rs  store.rs  tree.rs  types.rs
src/storage/wal/: format.rs  mod.rs  recovery.rs  writer.rs
src/traits/: anchor.rs  checkpoint.rs  dispatcher.rs  mod.rs  proof.rs  storage.rs  tree_rotator.rs
tests/: api.rs  chain_index.rs  ots_integration.rs  privacy_test.rs  slab_rfc6962_test.rs  storage.rs  streaming_test.rs  super_tree_arch.rs  tree_chaining.rs  wal_integration.rs  workflow_test.rs
tests/api/: anchor_test.rs  auth_test.rs  health_test.rs  mod.rs
tests/common/: assertions.rs  fixtures.rs  mod.rs
tests/storage/: crud_test.rs  mod.rs  proof_test.rs
