[package]
name = "atl-server"
version = "0.22.5"
edition = "2021"
rust-version = "1.92.0"
authors = ["Dmitrii Zatona <dmitrii@zatona.dev>"]
description = "Autonomous notarization primitive - HTTP server for ATL Protocol v2"
license = "Apache-2.0"
repository = "https://github.com/evidentum-io/atl-server"
keywords = ["transparency-log", "merkle-tree", "timestamping", "notarization"]
categories = ["cryptography", "web-programming"]

[dependencies]
# Core ATL library
atl-core = { path = "../atl-core", version = "0.23", features = ["bitcoin-ots"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-trait = "0.1"

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Anchoring
rasn = { version = "0.28", optional = true }
rasn-cms = { version = "0.28", optional = true }
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }

# Monitoring (optional - disabled by default)
betteruptime-heartbeat = { git = "https://github.com/thunderwind-io/rust-betteruptime-heartbeat", optional = true }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.22"
crc = "3"
memmap2 = "0.9"
crc32fast = "1.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Crypto (for Ed25519 key handling)
ed25519-dalek = "2"
sha2 = "0.10"

# gRPC (optional)
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }

[build-dependencies]
tonic-build = { version = "0.12", optional = true }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
hyper = "1"
sha2 = "0.10"
mockito = "1.5"
bytes = "1"
serial_test = "3"

[features]
default = ["rfc3161", "ots"]
rfc3161 = ["rasn", "rasn-cms", "reqwest"]
ots = ["reqwest"]  # Needs reqwest for blockchain API lookups
monitoring = ["betteruptime-heartbeat"]  # Optional Better Uptime heartbeats
grpc = ["tonic", "prost", "tonic-build"]  # gRPC Node-Sequencer architecture
full = ["rfc3161", "ots", "monitoring", "grpc"]

[[bin]]
name = "atl-server"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
